import controller.GameController;

public class Main {

    public static void main(String[] args) {
        GameController game1 = new GameController();
        game1.startGame(args);

        // a=i t=c o=s u=1,2,5,5,10 f=10
        // a=i t=c u=1,2,5,5,10
    }
}
