package creation.model.character;

public class Infantry extends Character {
    public Infantry(int value) { super(value, TroopType.INFANTRY); }
}