package creation.model.character;

public class Sniper extends Character {
    public Sniper(int value) { super(value, TroopType.SNIPER); }
}