package model;

public interface Shootable {

}
