package util;

public class Validator {

    public boolean validateParameter(Object args) {
        return true;
    }
}
