package view;

import model.BattleField;

public class ConsoleView {

}
