---
config:
  layout: dagre
  look: neo
  theme: base
---
classDiagram
    direction BT
    namespace model {
        class Infantry {
        }

        class Commanders {
            + giveOrder() void
        }

        class Medics {
            + heal() void
        }

        class Tanks {
        }

        class Sniper {
        }

        class Shootable {
            + attack() void
        }

        class Character {
            - health: int
            - speed: int
            - rank: int
            - row: int
            - column: int
            + ~Abstrat~ act()
            + move(row:int, column:int)
            + takeDamage()
            + isAlive() boolean
        }

        class BattleField {
            - fieldMatrix: Cell[][]
            - troops: List Character[]
            + showBattleField() void
            + getCell(rows: int, columns:int) Cell
            + placeCharacter(Character, int, int) void
        }

        class Cell {
            - character: Character
            - row: int
            - column: int
            + isEmpthy() :boolean
            + setCharacter(Character) void
        }

    }
    namespace util {
        class Validator {
            + validateParameter(Map) boolean
        }

        class ArgumentParser {
        }

    }
    namespace controller {
        class SortController {
            - strategy: SortStrategy
            + setStrategy(sortStrategy: SortStrategy) void
            + executeSort(troops: List~Character~) void
        }

        class GameController {
            + startGame(args: String[]) void
        }

    }
    namespace view {
        class ConsoleView {
            showInitialBattlefield(Battlefield)
            showFinalBattlefield(Battlefield)
            showError(String)
        }

    }
    namespace sort {
        class SortStrategy {
            + sort(troops: List~Character~) void
        }

        class BubbleSort {
        }

        class QuickSort {
        }

        class MergeSort {
        }

        class InsertionSort {
        }

    }
    class Main {
    }

    <<Interface>> Shootable
    <<Abstract>> Character
    <<Class>> SortController
    <<interface>> SortStrategy

    Infantry --|> Character
    Sniper --|> Character
    Tanks --|> Character
    Medics --|> Character
    Commanders --|> Character
    BattleField .. SortController
    Character --o BattleField
    Cell --* BattleField
    Tanks ..|> Shootable
    Infantry ..|> Shootable
    Sniper ..|> Shootable
    BattleField -- ConsoleView
    BubbleSort ..|> SortStrategy
    MergeSort ..|> SortStrategy
    InsertionSort ..|> SortStrategy
    QuickSort ..|> SortStrategy
    SortStrategy --> SortController